<resources>
    <string name="app_name">Я я</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="button_money">MONEY</string>
    <string name="button_statistic">STATISTIC</string>
    <string name="button_notification">NOTIFICATION</string>
    <string name="support_settings">SETTINGS</string>
    <string name="button_car">CAR</string>
    <string name="button_game">GAME</string>
    <string name="button_weather">WEATHER</string>
    <string name="button_team_score">TEAM SCORE</string>
    <string name="button_bank">BANK</string>
    <string name="button_percent">PERCENT</string>
    <string name="text_view_open_google_form">Open Google Form</string>
    <string name="button_send">Send</string>
    <string name="text_view_date">Date</string>
    <string name="text_view_amount">Amount</string>
    <string name="text_view_spent_usd">Spent USD</string>
    <string name="text_view_get_usd">Get USD</string>
    <string name="text_view_actual_price">Actual price</string>
    <string name="text_view_ticker">Ticker</string>
    <string name="text_view_type">Type</string>
    <string name="text_view_operation">Operation</string>
    <string name="text_view_euro">EURO</string>
    <string name="text_view_usd">USD</string>
    <string name="text_view_week_ago">Week ago</string>
    <string name="settings_languages">Languages</string>
    <string name="text_view_calculate">Calculate</string>
    <string name="text_view_number">Number</string>
    <string name="text_view_reset">Reset</string>
    <string name="text_view_team_1">Team 1</string>
    <string name="text_view_set">Set</string>
    <string name="text_view_team_2">Team 2</string>
    <string name="dialog_language">Choose Language</string>
    <string name="dialog_percent">Choose Percent operation</string>
    <string name="toast_incorrect_values">Incorrect values</string>
    <string name="text_view_find">Find</string>
    <string name="edit_text_weather_set_your_city">Set your City</string>
    <string name="text_view_fast_panel">Fast panel</string>
    <string name="dialog_pin_your_city">Pin your City</string>
    <string name="text_view_hold">hold</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_incorrect_city">Incorrect City</string>
    <string name="button_random">RANDOM</string>
    <string name="radio_button_both">Both</string>
    <string name="radio_button_he">He</string>
    <string name="radio_button_she">She</string>
    <string name="text_view_play">Play</string>
    <string name="text_view_next">Next</string>
    <string name="label_warm_up">Warm up</string>
    <string name="label_hot">Hot</string>
    <string name="check_box_anal">Anal</string>
    <string name="text_view_hint_for_her">(for her)</string>
    <string name="text_view_hint_for_him">(for him)</string>

    <string name="action_massage">Massage</string>
    <string name="action_bite">Bite</string>
    <string name="action_finger">Finger</string>
    <string name="action_lick">Lick</string>
    <string name="action_kiss">Kiss</string>
    <string name="action_sniff">Sniff</string>
    <string name="action_slap">Slap</string>
    <string name="action_suck">Suck</string>
    <string name="action_squeeze">Squeeze</string>
    <string name="action_tease">Tease</string>
    <string name="action_jerk_off">Jerk off</string>

    <string name="place_ear">Ear</string>
    <string name="place_neck">Neck</string>
    <string name="place_arms">Arms</string>
    <string name="place_legs">Legs</string>
    <string name="place_nipples">Nipples</string>
    <string name="place_ass">Ass</string>
    <string name="place_breast">Breast</string>
    <string name="place_anal">Anal</string>
    <string name="place_dick">Dick</string>
    <string name="place_lips">Lips</string>
    <string name="place_back">Back</string>
    <string name="place_stomach">Stomach</string>
    <string name="place_eggs">Eggs</string>
    <string name="place_penis_head">Penis head</string>
    <string name="place_vagina">Vagina</string>
    <string name="place_clitoris">Clitoris</string>

    <string-array name="spinner_type">
        <item>Crypto</item>
        <item>Stock</item>
    </string-array>

    <string-array name="spinner_percent">
        <item>%</item>
        <item>Value</item>
    </string-array>

    <string-array name="spinner_language">
        <item>English</item>
        <item>Українська</item>
        <item>Русский</item>
    </string-array>

    <string-array name="spinner_operation">
        <item>Buy</item>
        <item>Sell</item>
    </string-array>

    <string-array name="spinner_currency">
        <item>Average In Banks</item>
        <item>National Bank of Ukraine</item>
        <item>Black Market</item>
    </string-array>

</resources>