<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/text_view_car"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/text_view_statistic"
        android:background="@drawable/neon1_bg"
        android:padding="40dp"
        android:onClick="onClickTextView"
        android:drawableLeft="@drawable/ic_baseline_directions_car_24"
        android:gravity="center"
        android:text="@string/button_car"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_statistic"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/neon2_bg"
        android:drawableLeft="@drawable/ic_baseline_cruelty_free_24"
        android:gravity="center"
        android:onClick="onClickTextView"
        android:padding="30dp"
        android:layout_margin="8dp"
        android:text="@string/button_statistic"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_car" />

    <TextView
        android:id="@+id/text_view_money"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@+id/text_view_statistic"
        android:text="@string/button_money"
        android:textColor="@color/white"
        android:padding="55dp"
        android:onClick="onClickTextView"
        android:drawableLeft="@drawable/ic_baseline_attach_money_24"
        android:background="@drawable/neon3_bg"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_notification"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/neon4_bg"
        android:drawableLeft="@drawable/ic_baseline_notifications_24"
        android:gravity="center"
        android:onClick="onClickTextView"
        android:padding="25dp"
        android:layout_margin="8dp"
        android:text="@string/button_notification"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_view_money" />

    <TextView
        android:id="@+id/text_view_team_score"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/neon5_bg"
        android:drawableLeft="@drawable/ic_baseline_scoreboard_24"
        android:gravity="center"
        android:onClick="onClickTextView"
        android:padding="30dp"
        android:layout_margin="8dp"
        android:text="@string/button_team_score"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_statistic" />

    <TextView
        android:id="@+id/text_view_bank"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/neon6_bg"
        android:drawableLeft="@drawable/ic_baseline_account_balance_24"
        android:gravity="center"
        android:onClick="onClickTextView"
        android:padding="50dp"
        android:layout_margin="8dp"
        android:text="@string/button_bank"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_view_notification" />

    <TextView
        android:id="@+id/text_view_percent"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/neon7_bg"
        android:drawableLeft="@drawable/ic_baseline_percent_24"
        android:gravity="center"
        android:onClick="onClickTextView"
        android:padding="45dp"
        android:layout_margin="8dp"
        android:text="@string/button_percent"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_team_score" />

    <TextView
        android:id="@+id/text_view_weather"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/neon8_bg"
        android:drawableLeft="@drawable/ic_baseline_wb_sunny_24"
        android:gravity="center"
        android:onClick="onClickTextView"
        android:padding="40dp"
        android:layout_margin="8dp"
        android:text="@string/button_weather"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_view_bank" />

</androidx.constraintlayout.widget.ConstraintLayout>