<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_view_team_1"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/bg_button3_3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/bg_button1_1"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        android:text="@string/text_view_team_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTeam1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:background="@color/bg_button3_3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/textViewTeam2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewTeam2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:background="@color/bg_button1_1"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textViewTeam1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewReset"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/text_view_reset"
        android:textSize="25sp"
        android:gravity="center"
        android:background="@color/gray"
        android:textColor="@color/black"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>