<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiy.BankActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical" />

    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_spinner"
        android:entries="@array/spinner_currency"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_view_usd"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency" />

    <TextView
        android:id="@+id/textViewDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="39.00"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency" />

    <TextView
        android:id="@+id/textViewOldDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="39.00"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewDollar" />

    <TextView
        android:id="@+id/textViewLabelOldDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_view_week_ago"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDollar" />

    <TextView
        android:id="@+id/textViewLabelEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_euro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelOldDollar" />

    <TextView
        android:id="@+id/textViewEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="42.00"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewOldDollar" />


    <TextView
        android:id="@+id/textViewOldEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="42.00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewEuro" />


    <TextView
        android:id="@+id/textViewLabelOldEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_view_week_ago"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelEuro" />

</androidx.constraintlayout.widget.ConstraintLayout>